--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
+// File: tsconfig.json
+
 {
   "compilerOptions": {
-    "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -18,6 +19,8 @@
         "name": "next"
       }
     ],
+    // THIS IS THE CRITICAL PART THAT FIXES THE ERROR
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
     }
