--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
@@ -26,6 +27,7 @@
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "react": "^18",
+    "react-day-picker": "^9.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.62.0",
     "tailwind-merge": "^2.6.0",
