--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/ssr": "^0.3.0",
     "@tanstack/react-query": "^5.45.1",
     "@tanstack/react-table": "^8.17.3",
+    "@types/react-select": "^5.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -30,6 +31,8 @@
     "react-day-picker": "^9.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
+    "react-select": "^5.10.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.76"
